Changelog
=========

1.2.3 (unreleased)
------------------

* Fixed deprecated URL for add on packages (third party content types)
  in the doc.
  [glenfant]

1.2.2 (2009-06-07)
------------------

* A UID can start with numbers. The value of the id attribute cannot start
  with a number by naming convention. The views now use:
  string:title-${view/getUniqueIdentifier}, which always starts with a t
  [jladage]

* Don't render empty descriptions in standard document.
  [jensens]

* In Plone 3 the contributor is the one adding content. So default roles for
  "Add Collage content" is now Contributor, additional to Owner & Manager.

* Don't assume that a view is always available: added error view as fallback.
  It helps a lot in development and doesn't expose ugly tracebacks to users  
  if site has a configuration problem. Also minor cleanup and fixed tests.
  [jensens]

* Added confirmation-popup for delete/remove action. 
  [jensens]

* Make viewlets following all the same paradigm.  
  Reorder them according to usability thought. Turn expandable content into
  overlayed box.
  [jensens]

* Turn add row into menu. Fix circular import problem instead ugly workaround.
  [jensens]

* Added upgrade step to 1.2.2 that adds the alias whitelist property, without
  which the control panel crashes.
  [glenfant]

* Synched all .po files following jensens's changes and added french
  missing labels.
  [glenfant]

* Make a difference between types to be added to Collage and types 
  enabled for alias. This introduces a new whitelist in controlpanel.  
  [jensens]

* Feature "automatic split of rows with more than 3 entries" was broken. 
  Its fixed now. I also added an unbatched view for the row. 
  [jensens]

* Almost completed German translation.
  [jensens]

* Added Dutch translation (nl).
  [reinout]

* Added portuguese (pt) translation.
  [igbun]

* Added additional CSS classes to Collage blocks to make it easier to